--- a/scss/_style.scss
+++ b/scss/_style.scss
@@ -44,7 +44,7 @@ span {
 
 
 .logo_container {
-  .logo div{
+  .logo span{
     display: none;
   }
   h1{
